--- a/loop/chaoheduihua2-2.html
+++ b/loop/chaoheduihua2-2.html
@@ -112,11 +112,94 @@
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;">另外，就日本来讲，你们老说朝鲜发展核武器对你们构成威胁。但坦率地说，朝鲜很多资金和技术是从日本来的。朝鲜有一条船叫万景峰号，前些年这条船经常去日本，运回朝鲜需要的东西和资金。最近暴露出来了，朝鲜推进核导计划的某个环节，用的发动机来自日本洗衣机的马达。所以，安倍晋三对朝鲜进行制裁的时候，把禁止向朝鲜出售洗衣机都列进去了。当然万景峰号现在已被日本禁止入港了，但曲线汇款还有没有?这说明，日本对朝鲜发展核导技术是有贡献。对此，日本有检查的必要。
 						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;"><strong>最后一点就是，朝鲜的领袖体制是非常有利于发展核武器的。</strong>领袖在朝鲜享有绝对的权威，领袖说的话在朝鲜必须百分之百地落实，领袖的意志就是全国的意志。这样就可以调动全国的力量办一件大事。领袖决定发展核武器，国家就可以集中全国的人力、物力和财力，以会战的形式推进之，不会存在任何的掣肘因素。在推进核导计划方面，朝鲜充分发挥了这种体制优势。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">总之，在上述内外因素联合作用下朝鲜完满的达到了它的拥核目的。从这个角度看，反对朝鲜拥有核武器的这些大国、周边国家，以及整个国际社会，在这个问题上都失败了。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">谢谢！
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							<strong>周志兴</strong>：下一个发言的是日方的堀田幸裕，他是霞山会研究员、《东亚月刊》的主编。我听说《东亚月刊》是业内非常有影响力的一本杂志，我们请他来发言。
+						</p>
+						<div style="text-align: center;">
+							<img src="http://www.dunjiaodu.com/d/file/top/2017-03-16/308530b65fb708b5492a17e6244d5cbe.jpg" style="width: 400px; height: 250px" class="img-fluid" alt=""><br/><br/>
+							<small style="color:grey">堀田幸裕： 朝鲜拥核的条件还有朝鲜利用了中国和美日韩对朝核问题的分歧</small>
+							<p></p>
+						</div>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							<strong>堀田幸裕</strong>：谢谢主持人的介绍，实际上我是负责《东亚月刊》编辑工作的人员之一。今天能够参加这样一个研讨会，我非常高兴。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							另外，一直以来我经常引用张琏瑰先生的各种发言，今天我能直接和您见面，也非常的荣幸。在第二个环节，我们的主题是北朝鲜拥有核武器的原因。刚才张先生谈到了很多问题，把我想说的话几乎都说完了。我也准备了一些资料，所以我想简单的把这些资料介绍一下。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							<strong>首先是北朝鲜开发核武器的目的，主要为了对美国，这是非常清楚的。</strong>美朝之间一直是对立的关系，而北朝鲜也希望和美国签署和平条约。刚才饭村先生说过，北朝鲜已经把和平条约的缔结和核武开发分开来看了。为什么北朝鲜要持有核武器，我们不去问北朝鲜的领导人，我们也不知道。我们看北朝鲜的说法，像中国有广大的领土，有强有力的经济，还有众多的人口，为了保持自己的地位，也要优先发展自己的核武器。更不用说已经有核武器的美国和我们是对立的关系，所以我们必须要发展核武器。所以我们受到来自美国的威慑和周边国家相比是非常大的，无论是政治、军事、经济都受到了非常之大的压力。这也是北朝鲜的媒体的说法，为什么北朝鲜要有核武器开发的想法，就是这样的理由。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							一直以来，我们认为<strong>北朝鲜是把核武器作为一个外交手段</strong>。而且把核武的开发当作换取能源供给的一个手段，但是，就像张先生您说的那样，其实北朝鲜只是为了争取时间，为自己有更多的时间开发核武器。站在北朝鲜的角度上来说，它的发展是阶段性的，2006年它成功的开发核武器之后，突破了这个门槛开始转变态度。它已经不把核武器的开发作为外交的手段，而是作为一个最终的目标了。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							北朝鲜2005年宣布持有核武器，又在2012年的时候，也就是金正恩上台之后修改了宪法，在这个条文中明确的宣布要持有核武器。2006年北朝鲜正式宣布自己持有核武器的真实意图是什么呢?当时北朝鲜所面临的环境就是在这之前，美国发表说要向北朝鲜提供援助，但是之后北朝鲜马上就进行了ICBM的试验，所以这之后，美朝之间的谈判也就中断了。
+						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">
+							另外，日朝之间因为人质绑架问题，曾经启动过特别调查委员会，但是一直没有看到实质性的进展。我们再看韩国，朴槿惠政权是一个保守政权，自她上台以后，韩朝之间的关系也没有太大的进展。2012年之后，金正恩上台之后，他和周边国家和外部的关系都不是非常好。另外，朝鲜体制一直是强调正统血统的，金正恩有非常强大的民族自负，这在他修改的宪法中我们可以看到，“在世界体系瓦解帝国主义联合势力的攻势之下，我们也将发展成为政治思想强国和武力的军事强国”。为了维持这种体制，他们认为要持有核武器，这是作为他们自己的理论在宪法中进行了强调。
+						</p>
+						<p></p>
+						<p></p>
+						<nav aria-label="Page navigation example">
+						  <ul class="pagination justify-content-center">
+						    <li class="page-item"><a id="previous" class="page-link" href="#">上一页</a></li>
+						    <li class="page-item"><a class="page-link" href="chaoheduihua2-1.html">1</a></li>
+						    <li class="page-item active"><a class="page-link" href="chaoheduihua2-2.html">2</a></li>
+						    <li class="page-item"><a class="page-link" href="chaoheduihua2-3.html">3</a></li>
+						    <li class="page-item"><a id="next" class="page-link" href="#">下一页</a></li>
+						  </ul>
+						</nav>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
 				</div>
 			</div>
+			<div class="row">
+				<HR align=center width=1200 color=black SIZE=5>
+				<div class="col-9 footerBox">
+					<footer class="footer-div">
+						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
+						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
+						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
+						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
+					</footer>
+				</div>
+				<div class="col-3 QRcodeBox">
+					<div class="scan-links"> 
+          				<a class="forum-link" href="">
+          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
+          				</a>
+          				<p style="padding-top:20px;"> 微信公众号 </p>
+      				</div>
+				</div>
+			</div>
 		</div>
 	</body>
+	<script type="text/javascript">
+		var currPage = document.getElementsByClassName("page-item active");
+		var pagination = document.getElementsByClassName("page-item");
+		var previous = document.getElementById("previous");
+		var next = document.getElementById("next");
+		if(currPage[0].innerText == "1\n"){
+			pagination[0].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			previous.setAttribute("href", "chaoheduihua2-" + (num-1) + ".html");
+		}
+		if(currPage[0].innerText == "3\n"){
+			pagination[pagination.length-1].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			next.setAttribute("href", "chaoheduihua2-" + (num+1) + ".html");
+		}
+		console.log(currPage);
+	</script>
 </html>
