--- a/loop/view.html
+++ b/loop/view.html
@@ -146,7 +146,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（三）：新形势下的各国对朝政策</h6></a>
+				                    <a href="chaoheduihua3.html"><h6 class="card-title">中日学者朝核问题对话（三）：新形势下的各国对朝政策</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">李枏：2017年初，最引人关注的是韩国的政治动荡。朴槿惠“亲信干政门事件”使得民意在韩国政治中的作用越来越明显和重要。韩国迫切需要进行制度创新，而从韩国总统候选人近期对修宪的观点可以看出，限制总统权力几乎是一种趋势...</p>
 				                </div>
 				            </div>
@@ -158,7 +158,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">中日学者朝核问题对话（四）：国际社会如何推动朝鲜半岛无核化</h6></a>
+				                    <a href="chaoheduihua4-1.html"><h6 class="card-title">中日学者朝核问题对话（四）：国际社会如何推动朝鲜半岛无核化</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">平岩俊司：去年朝鲜进行了四五次的核试验和20次以上的弹道导弹的发射，朝鲜的核问题已经进入了全新阶段。联合国安理会多次通过了决议，对朝鲜进行制裁，但是没有获得所期待的效果。对朝鲜的核问题，有两个极端的选项...</p>
 				                </div>
 				            </div>
@@ -170,7 +170,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">中日学者朝核问题对话：朝鲜核能力评估及其威胁</h6></a>
+				                    <a href="chaoheduihua1-1.html"><h6 class="card-title">中日学者朝核问题对话：朝鲜核能力评估及其威胁</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">首先，现在北朝鲜的导弹和火箭的现状。2016年的9月份安倍首相在联合国大会上说北朝鲜的威胁已经到了一个与以往不同的全新阶段。其实，并不仅仅是朝鲜的宣传，实际上从统计学的角度来说，他们也是频繁地在很高技术层面进行了反复的挑衅...</p>
 				                </div>
 				            </div>
