--- a/loop/chaoheduihua2-1.html
+++ b/loop/chaoheduihua2-1.html
@@ -111,6 +111,7 @@
 						<p style="text-align:center; color:grey;">主办：美中新视角基金会、钝角网、笹川平和财团、日中友好基金会</p>
 						<div style="text-align: center;">
 							<img src="http://www.dunjiaodu.com/d/file/top/2017-03-16/4b4c48b39e01ad7b784b5adc9d7c16c0.jpg" style="width: 400px; height: 250px" class="img-fluid" alt=""><br/>
+							<br/>
 							<small style="color:grey">周志兴，胡一平</small>
 							<p></p>
 						</div>
@@ -142,7 +143,7 @@
 						    <li class="page-item"><a id="previous" class="page-link" href="#">上一页</a></li>
 						    <li class="page-item active"><a class="page-link" href="chaoheduihua2-1.html">1</a></li>
 						    <li class="page-item"><a class="page-link" href="chaoheduihua2-2.html">2</a></li>
-						    <li class="page-item"><a class="page-link" href="#">3</a></li>
+						    <li class="page-item"><a class="page-link" href="chaoheduihua2-3.html">3</a></li>
 						    <li class="page-item"><a id="next" class="page-link" href="#">下一页</a></li>
 						  </ul>
 						</nav>
