--- a/loop/chaoheduihua1-1.html
+++ b/loop/chaoheduihua1-1.html
@@ -135,21 +135,74 @@
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;"><strong>首先，现在北朝鲜的导弹和火箭的现状</strong>。2016年的9月份安倍首相在联合国大会上说北朝鲜的威胁已经到了一个与以往不同的全新阶段。其实，并不仅仅是朝鲜的宣传，实际上从统计学的角度来说，他们也是频繁地在很高技术层面进行了反复的挑衅。2016年进行了两次核爆，还有三次试射飞毛腿导弹，三次劳动导弹，两次长距导弹，还有舞水端的发射，新型对空导弹发射也有一次，非常频繁。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>张琏瑰</strong>：对刚才大家讨论的问题，我先谈两个观点。一个是关于朝鲜的核能力。到目前为止大家计算朝鲜有多少核材料，一般说是有38.5公斤,这是2008年朝鲜自己申报的。但是，这仅仅是武器级的钚。朝鲜现在做核武器已经转移到浓缩铀方向，这是2009年朝鲜自己向联合国通报，并由应邀参观朝鲜核设施的美国专家证实了的。而其浓缩铀能力有多大，现在有多少武器级的高浓缩铀，大家是不掌握的。美国的核专家赫克教授去年估计，朝鲜现在已经拥有了一年做7颗原子弹的能力。因此有人计算，到了2025年，朝鲜最多可以拥有148颗原子弹。当然这是一种推测。这是一个问题。
+						<p style="line-height: 1.6em; text-indent: 2em;">除此之外，他们还说我们的武器库越来越丰富，技术水平也是不断提升的，可以说北朝鲜确实是按照自己的方式让他们的技术取得了进步。所以，安倍首相在联合国大会上说已经进入了一个全新的阶段，是一个全新的层次。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>张琏瑰</strong>：对刚才大家讨论的问题，我先谈两个观点。一个是关于朝鲜的核能力。到目前为止大家计算朝鲜有多少核材料，一般说是有38.5公斤,这是2008年朝鲜自己申报的。但是，这仅仅是武器级的钚。朝鲜现在做核武器已经转移到浓缩铀方向，这是2009年朝鲜自己向联合国通报，并由应邀参观朝鲜核设施的美国专家证实了的。而其浓缩铀能力有多大，现在有多少武器级的高浓缩铀，大家是不掌握的。美国的核专家赫克教授去年估计，朝鲜现在已经拥有了一年做7颗原子弹的能力。因此有人计算，到了2025年，朝鲜最多可以拥有148颗原子弹。当然这是一种推测。这是一个问题。
+						<p style="line-height: 1.6em; text-indent: 2em;">为什么它会给我们造成威胁，怎样构成威胁?我想谈五点以此来说。第一点，刚才已经说到了他们的攻击能力不断得到提升。比如说美国对北朝鲜来说是最大的目标，所以，朝鲜的对美的遏制能力，就是所谓的第二次核攻击的能力得到提升。因此他们有可能正在接近最低程度的遏制状态。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>张琏瑰</strong>：对刚才大家讨论的问题，我先谈两个观点。一个是关于朝鲜的核能力。到目前为止大家计算朝鲜有多少核材料，一般说是有38.5公斤,这是2008年朝鲜自己申报的。但是，这仅仅是武器级的钚。朝鲜现在做核武器已经转移到浓缩铀方向，这是2009年朝鲜自己向联合国通报，并由应邀参观朝鲜核设施的美国专家证实了的。而其浓缩铀能力有多大，现在有多少武器级的高浓缩铀，大家是不掌握的。美国的核专家赫克教授去年估计，朝鲜现在已经拥有了一年做7颗原子弹的能力。因此有人计算，到了2025年，朝鲜最多可以拥有148颗原子弹。当然这是一种推测。这是一个问题。
+						<p style="line-height: 1.6em; text-indent: 2em;">另外，与之相邻的韩国也是一样，美国有核，北朝鲜也有核，双方是相互抑制的关系。但是，对韩国来说，韩国没有核武器。南北双方的平衡关系就是不稳定的。有一个说法叫“稳定不稳定悖论”，有可能会出现稳定不稳定的悖论的现象。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>张琏瑰</strong>：对刚才大家讨论的问题，我先谈两个观点。一个是关于朝鲜的核能力。到目前为止大家计算朝鲜有多少核材料，一般说是有38.5公斤,这是2008年朝鲜自己申报的。但是，这仅仅是武器级的钚。朝鲜现在做核武器已经转移到浓缩铀方向，这是2009年朝鲜自己向联合国通报，并由应邀参观朝鲜核设施的美国专家证实了的。而其浓缩铀能力有多大，现在有多少武器级的高浓缩铀，大家是不掌握的。美国的核专家赫克教授去年估计，朝鲜现在已经拥有了一年做7颗原子弹的能力。因此有人计算，到了2025年，朝鲜最多可以拥有148颗原子弹。当然这是一种推测。这是一个问题。
+						<p style="line-height: 1.6em; text-indent: 2em;">另外，从整体上来看，北朝鲜认为在常规武器方面，南朝鲜是超过自己的，这是一种不稳定的状况。如果出现常规战争的话，就可能不断地升级。比如对方小规模的挑衅，会形成一定规模的反击。统的理论认为，如果超过这个限度，就会进行进一步的反击报复。但是，因为北朝鲜在常规武力方面不如韩国。但是它有核武器，这样的话，它就不会逐步去升级冲突，而可能一下子就付诸核武器来解决问题。正因为如此，威胁极大增加了。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>张琏瑰</strong>：对刚才大家讨论的问题，我先谈两个观点。一个是关于朝鲜的核能力。到目前为止大家计算朝鲜有多少核材料，一般说是有38.5公斤,这是2008年朝鲜自己申报的。但是，这仅仅是武器级的钚。朝鲜现在做核武器已经转移到浓缩铀方向，这是2009年朝鲜自己向联合国通报，并由应邀参观朝鲜核设施的美国专家证实了的。而其浓缩铀能力有多大，现在有多少武器级的高浓缩铀，大家是不掌握的。美国的核专家赫克教授去年估计，朝鲜现在已经拥有了一年做7颗原子弹的能力。因此有人计算，到了2025年，朝鲜最多可以拥有148颗原子弹。当然这是一种推测。这是一个问题。
+						<p style="line-height: 1.6em; text-indent: 2em;"><strong>还有一个是所谓的不先使用核武器，现在已经出现了一些摇摆</strong>。刚才提到了对美国是最小程度的遏制，如果它的目标是针对美国能够形成最小程度的遏制的话，这种不首先使用核武器是一个恰当的选择。但是，大家看一下，最近北朝鲜在说什么。他们说我们是一个负责任的核武器拥有国，但是要不要先使用核武器他们的态度是暧昧的。
 						</p>
+						<p style="line-height: 1.6em; text-indent: 2em;">2006年朝鲜第一次进行核试验，当时北朝鲜发出的声明说我们绝对不先使用核武器。但是在此之后发生了一些变化，2013年的4月份最高人民会议有一个法令，说“如果敌对的其它的核拥有国在侵略我国或来攻击我国的话，我们作为报复会使用核武器”。这样的话不属于先使用核武器，只是作为报复的手段来使用。刚才我已经提到现在他们的能力已经提升，所以我们认为他们有可能毫不犹豫的付诸使用核武器，这是令人担忧的。
+						</p>
+						<p></p>
+						<p></p>
+						<nav aria-label="Page navigation example">
+						  <ul class="pagination justify-content-center">
+						    <li class="page-item"><a id="previous" class="page-link" href="#">上一页</a></li>
+						    <li class="page-item active"><a class="page-link" href="chaoheduihua1-1.html">1</a></li>
+						    <li class="page-item"><a class="page-link" href="chaoheduihua1-2.html">2</a></li>
+						    <li class="page-item"><a class="page-link" href="chaoheduihua1-3.html">3</a></li>
+						    <li class="page-item"><a id="next" class="page-link" href="#">下一页</a></li>
+						  </ul>
+						</nav>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
 				</div>
 			</div>
+			<div class="row">
+				<HR align=center width=1200 color=black SIZE=5>
+				<div class="col-9 footerBox">
+					<footer class="footer-div">
+						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
+						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
+						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
+						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
+					</footer>
+				</div>
+				<div class="col-3 QRcodeBox">
+					<div class="scan-links"> 
+          				<a class="forum-link" href="">
+          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
+          				</a>
+          				<p style="padding-top:20px;"> 微信公众号 </p>
+      				</div>
+				</div>
+			</div>
 		</div>
 	</body>
+	<script type="text/javascript">
+		var currPage = document.getElementsByClassName("page-item active");
+		var pagination = document.getElementsByClassName("page-item");
+		var previous = document.getElementById("previous");
+		var next = document.getElementById("next");
+		if(currPage[0].innerText == "1\n"){
+			pagination[0].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			previous.setAttribute("href", "chaoheduihua1-" + (num-1) + ".html");
+		}
+		if(currPage[0].innerText == "3\n"){
+			pagination[pagination.length-1].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			next.setAttribute("href", "chaoheduihua1-" + (num+1) + ".html");
+		}
+		console.log(currPage);
+	</script>
 </html>
