--- a/loop/chaoheduihua2-1.html
+++ b/loop/chaoheduihua2-1.html
@@ -115,7 +115,7 @@
 							<small style="color:grey">周志兴，胡一平</small>
 							<p></p>
 						</div>
-						<p style="line-height: 1.6em; text-indent: 2em;">周志兴：第二节的题目是“朝鲜成功拥核的原因”，第一个发言的是中央党校国际战略研究院的张琏瑰教授。张教授对朝鲜非常了解，他毕业于金日成大学，还曾长期在中朝边境做一些甄别类的工作，可以说一辈子都在研究朝鲜。
+						<p style="line-height: 1.6em; text-indent: 2em;"><strong>周志兴</strong>：第二节的题目是“朝鲜成功拥核的原因”，第一个发言的是中央党校国际战略研究院的张琏瑰教授。张教授对朝鲜非常了解，他毕业于金日成大学，还曾长期在中朝边境做一些甄别类的工作，可以说一辈子都在研究朝鲜。
 						</p>
 						<div style="text-align: center;">
 							<img src="http://www.dunjiaodu.com/d/file/top/2017-03-16/34653086abc5b820f60396cb945465e0.jpg" style="width: 400px; height: 250px" class="img-fluid" alt="">
@@ -129,7 +129,7 @@
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;">给我分的发言题目是，朝鲜为什么能在国际社会特别是各大国坚决反对下一步一步推进核计划，拥有了原子弹?这个问题确实非常重要，值得我们研究。我考虑了一下，我想朝鲜之所以能够做到这一步，主要是三种因素促成的。一个是朝鲜自身能动因素，再一个就是反对朝鲜拥核的国家失误因素，还有一个就是朝鲜这个国家特殊制度的因素。这三个因素相互作用成就了朝鲜，使它安全地、完满地实现了它的战略目标。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>从朝鲜能动因素来看，首先，朝鲜有一个非常清晰坚定的战略目标，就是拥有核武器成为核国家。</strong>这个目标几十年从来没有动摇过。这个目标是金日成制定的，根据一位老志愿军战士介绍，早在1953年金日成在内部讲话里就讲过，朝鲜要拥有核武器。1956年、1959年朝鲜和苏联签订协定获得了核技术，到60年代中期搞宁边核设施，80年代初开始做原子弹。最近英国《明星日报》报道，1984年的时候美国就已经知道了朝鲜在做原子弹。1985年美国、苏联一起给它施加压力，迫使朝鲜签署《核不扩散条约》。美国以为签约了，朝鲜就不搞核武器了，后来发现它仍在搞。于是1993年朝美直接谈判，未果，1994年美国要对朝动武。朝鲜为了避免挨打，这年10月同美国签署《框架协议》，承诺冻结核计划。其实，朝鲜的核计划没有受到丝毫影响。2002年10月美国派特使去平壤追究朝鲜违背协议继续推进核计划的责任，朝鲜顺势向美国承认了核计划。但这时美国在“9.11”事件后打响阿富汗战争和伊拉克战争，无暇顾及朝鲜了。为了为其核计划争取时间和安全，2003年8月朝鲜参加六方会谈。2006年10月朝鲜进行了第一次核试验。由此可见，无论是给它施加压力，还是谈判或是签约，甚至动武威胁，从来没有影响朝鲜按照既定方针稳步推进它的核计划，目标非常坚定清晰。这是它取得成功的第一个保证。
+						<p style="line-height: 1.6em; text-indent: 2em;"><strong>从朝鲜能动因素来看，首先，朝鲜有一个非常清晰坚定的战略目标，就是拥有核武器成为核国家。这个目标几十年从来没有动摇过。这个目标是金日成制定的，根据一位老志愿军战士介绍，早在1953年金日成在内部讲话里就讲过，朝鲜要拥有核武器。1956年、1959年朝鲜和苏联签订协定获得了核技术，到60年代中期搞宁边核设施，80年代初开始做原子弹。最近英国《明星日报》报道，1984年的时候美国就已经知道了朝鲜在做原子弹。1985年美国、苏联一起给它施加压力，迫使朝鲜签署《核不扩散条约》。美国以为签约了，朝鲜就不搞核武器了，后来发现它仍在搞。于是1993年朝美直接谈判，未果，1994年美国要对朝动武。朝鲜为了避免挨打，这年10月同美国签署《框架协议》，承诺冻结核计划。其实，朝鲜的核计划没有受到丝毫影响。2002年10月美国派特使去平壤追究朝鲜违背协议继续推进核计划的责任，朝鲜顺势向美国承认了核计划。但这时美国在“9.11”事件后打响阿富汗战争和伊拉克战争，无暇顾及朝鲜了。为了为其核计划争取时间和安全，2003年8月朝鲜参加六方会谈。2006年10月朝鲜进行了第一次核试验。由此可见，无论是给它施加压力，还是谈判或是签约，甚至动武威胁，从来没有影响朝鲜按照既定方针稳步推进它的核计划，目标非常坚定清晰。这是它取得成功的第一个保证。
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;"><strong>能动因素的第二个方面是，朝鲜第二代领导人金正日制定了一个非常巧妙，也非常符合实际的策略方针，就是分两步走。</strong>这是一位接近朝鲜高层的旅日学者2009年10月在香港媒体发表文章透露的，称朝鲜最高领导人制定了一个“c计划”，定朝鲜拥核分两步走，第一步排除一切干扰掌握核武器，成为有核国家，第二步是展开外交活动，迫使国际社会承认其核国地位。我比喻这是“先生孩子，后报户口”。这两步走的设计非常巧妙，很奏效，把很多国家弄糊涂了。
 						</p>
