--- a/loop/view.html
+++ b/loop/view.html
@@ -182,7 +182,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">许纪霖：未来会诞生东亚共同体吗？</h6></a>
+				                    <a href="xujilin.html"><h6 class="card-title">许纪霖：未来会诞生东亚共同体吗？</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">美国国际问题专家基辛格和布热津斯基都曾说过，今天的东亚很有点像二十世纪上半叶的欧洲：欧洲民族主义、国家主义情绪高涨，出现了两次世界大战。然而，二十一世纪的东亚真的是上个世纪的欧洲吗?</p>
 				                </div>
 				            </div>
@@ -194,7 +194,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">韦森：中国经济的短期增速下行与长期增长前景</h6></a>
+				                    <a href="weisen-1.html"><h6 class="card-title">韦森：中国经济的短期增速下行与长期增长前景</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">对于2017年乃至未来几年的中国经济增长前景，经济学界和政府决策部门已有许多判断和研究。这些研究所产生的研判和预期，不但影响了每年总理《政府工作报告》中关于中国经济增长的年度增长目标，乃至各省市自治区政府的经济增长目标，而且实际上也决定了我们政府的整个宏观经济政策...</p>
 				                </div>
 				            </div>
