--- a/loop/chaoheduihua2-1.html
+++ b/loop/chaoheduihua2-1.html
@@ -133,7 +133,8 @@
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;"><strong>能动因素的第二个方面是，朝鲜第二代领导人金正日制定了一个非常巧妙，也非常符合实际的策略方针，就是分两步走。</strong>这是一位接近朝鲜高层的旅日学者2009年10月在香港媒体发表文章透露的，称朝鲜最高领导人制定了一个“c计划”，定朝鲜拥核分两步走，第一步排除一切干扰掌握核武器，成为有核国家，第二步是展开外交活动，迫使国际社会承认其核国地位。我比喻这是“先生孩子，后报户口”。这两步走的设计非常巧妙，很奏效，把很多国家弄糊涂了。
 						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>朝鲜能动因素第三个方面是，朝鲜制定并运用了灵活巧妙的战术。</strong>其一是“暗度陈仓”。开始的时候，朝鲜矢口否认它在开发核武器，坚称它开发核技术，完全是为了和平利用核能，因为它需要能源，缺乏电力，没有石油。人们信了。从1985年到2002年，朝鲜始终不承认自己在搞核武器，实际上这时候它的核武器已经搞的有模有样了。2002年的10月份，它第一次承认在搞核武器，2003年六方会谈时明确的告诉美国朝鲜已经有原子弹。这时朝鲜转变说法，是因为它开始准备进行核试验了，而这种大动作是无法掩盖的。</p>
+						<p style="line-height: 1.6em; text-indent: 2em;"><strong>朝鲜能动因素第三个方面是，朝鲜制定并运用了灵活巧妙的战术。</strong>其一是“暗度陈仓”。开始的时候，朝鲜矢口否认它在开发核武器，坚称它开发核技术，完全是为了和平利用核能，因为它需要能源，缺乏电力，没有石油。人们信了。从1985年到2002年，朝鲜始终不承认自己在搞核武器，实际上这时候它的核武器已经搞的有模有样了。2002年的10月份，它第一次承认在搞核武器，2003年六方会谈时明确的告诉美国朝鲜已经有原子弹。这时朝鲜转变说法，是因为它开始准备进行核试验了，而这种大动作是无法掩盖的。
+						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;">它采取的另一种战术就是“先预热后打枪”，充分利用递减效应。比方说，进行核试验这在国际上是大事。如果它突然核爆，会给国际社会造成重大冲击，会遭到国际社会严厉制裁，甚至是武力打击。因此，2002年它悄悄的跟美国说“我有了一种威力强大的武器”，2003年明示是“原子弹”，2005年2月正式宣布朝鲜有了原子弹。结果，包括中国、美国在内，都认为朝鲜是放大话，都不信。到了2006年10月，它炸了一颗原子弹，人们才发现它宣布的是真的。这就是把一次冲击分步化解，减少了对国际社会的刺激，钝化了大伙的神经和脾气，保证了自己的安全。
 						</p>
 						<p></p>
