--- a/loop/view.html
+++ b/loop/view.html
@@ -206,7 +206,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">秦前红：中国的司法改革以及面临的问题</h6></a>
+				                    <a href="qinqianhong-1.html"><h6 class="card-title">秦前红：中国的司法改革以及面临的问题</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">秦教授：我今天要跟各位分享的是中国的司法体制改革的问题，影响中国的未来，影响中国发展前景问题的更应该是中国的民主和法治问题...</p>
 				                </div>
 				            </div>
@@ -218,7 +218,7 @@
 				            </div>
 				            <div class="col">
 				                <div class="card-block px-2">
-				                    <a href=""><h6 class="card-title">穆斯林阿訇：全球“反恐” 为何越反越“恐”？</h6></a>
+				                    <a href="musilin-1.html"><h6 class="card-title">穆斯林阿訇：全球“反恐” 为何越反越“恐”？</h6></a>
 				                    <p class="card-text" style="line-height:1.3em;">编者按：2016年7月24日，亚太交流与合作基金会、亚太战略发展研究中心和北京普世社会科学研究所等共同主办了2016年中美国际反恐学术研讨会。会上，中美与会者围绕全球趋势、宗教与意识形态、媒体与通信、多边伙伴关系、信息分享等议题进行了深度讨论...</p>
 				                </div>
 				            </div>
