--- a/loop/weisen-1.html
+++ b/loop/weisen-1.html
@@ -139,47 +139,64 @@
 						</p>
 						<p style="line-height: 1.6em; text-indent: 2em;">实际上，从2012年开始，中国经济已连续十几个季度在下行。导致目前中国经济短期整体增速下行的原因，可以从3个表层现象来看：(1)投资增速在下行，尤其是近几年来占中国投资总量的60%以上的民间投资在下行。2016年以来，民间投资则加速下行，乃至到了月度负增长。(2)，2015年中国外贸出口出现负增长，2016年上半年中国的外贸出口有进一步下降了下降7.7%。近两年中国外贸出口下降，主要是中国数百万家外贸出口企业目前面临着5大挑战：第一个是中国企业的劳动力成本近些年来不断升高，已经接近甚至超过东欧国家和俄罗斯的平均单位劳动力成本了。第二、中国企业的税收负担相当重。第三、近几年人民币随美元升值而实际升值。第四、企业融资成本相当高，目前在中国许多企业尤其是中小企业在年利率10%以下根本从银行拿不到贷款。这几个因素决定了中国企业的竞争力和中国制造的产品的竞争力正在全球范围内正在下降。第五，全球贸易在萎缩。(3)，国内消费增速实际上随经济增速的放缓而下降。
 						</p>
-						<div style="text-align: center;">
-							<img src="http://www.dunjiaodu.com/d/file/daguo/2017-02-14/745d043be7565ed159c7c8ff1b2f9e94.jpg" style="width: 400px; height: 250px" class="img-fluid" alt=""><br/>
-							<br/>
-							<small style="color:grey">图3: 2012年以来中国经济增速在下行的通道之中</small>
-							<p></p>
-						</div>
-						<p style="line-height: 1.6em; text-indent: 2em;">以上三个方面的因素只是中国经济增速下行的表层现象，而深层原因则是无论是中国的国有企业、三资企业，还是民营企业，这些年的利润增长率下降都是一个趋势。许多研究都表明，中国五百强企业的利润率，还没有美国、澳大利亚高的大企业利润高，甚至还没有经济增速为负的荷兰企业的利润率高。这说明中国五百强企业虽然很大，但并不是很赚钱。另外，企业的负债率是中国经济的一个深层次的问题。尽管中国企业负债占GDP的比重目前大约为125%左右，与其他国家相比不算太高，但问题是中国企业的债务与税前收入比太高，在2013年就高达3.5。而按照经济学家的通常估计，如果超过2，企业还债就有很大挑战。中国企业的利润率普遍下降，甚至大面积的亏损，这恰恰验证了前边凯恩斯所说的一个国家的繁荣时期与国家的利润膨胀时期异常地相符的理论判断。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;"><strong>3.如何看待中国经济的长期增长前景</strong>
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">目前对中国经济增速下行的原因，有三派观点：第一派观点是国务院发展研究中心前任常务副主任刘世锦。他们的研究团队发现，当一国的经济增长从投资驱动转向到消费拉动、从实体经济发展向虚拟和服务业发展时，经济增速自然下降了。 第二派观点主要是中国社科院的蔡昉、前布鲁金斯研究所(现在复旦大学)的王丰和日本一桥大学的伍晓鹰。这一派观点认为，自2015年后中国人口红利消失。第三派是复旦大学的韦森(笔者)和刘海影。我们认为，中国经济经过38年的高速增长，目前已经到了这一轮科技革命发展阶段上工业化的中后期，其表现为各行各业产能过剩，故中国经济增速下行是个自然趋势。我们还认为，城镇化是工业化的结果，而不是相反。因为，在完成了这一轮科技革命发展阶段上的工业化的过程之后，中国的城镇化只会减速，而不会再加速，因而不能再指望考大规模的城镇化来推动中国经济超过7%或8%以上的高速增长了。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">事实上，观察一下第二次世界大战后一些超高速经济增长的国家和地区的经济发展历程，也可以佐证我们的理论判断。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">先看日本。图4显示，在二次战后，日本经济在1952年有20多年超过9%的高速增长。但在1973年后，日本完成了一轮工业化过程之后，经济增速很明显地下了两个台阶：从1952到1973年，日本有一个年经济增长超过9%高速增长时期;1973年，在石油危机的冲击下，日本经济陷入的短期萧条，从1975到1990年，经济增速跌了一半，只有4.3左右%;然后到1990年以后，20多年来日本经济增速平均还不到1%。
-						</p>
-						<div style="text-align: center;">
-							<img src="http://www.dunjiaodu.com/d/file/daguo/2017-02-14/2dec3808405c3dc526e90f1c177b3a60.jpg" style="width: 400px; height: 250px" class="img-fluid" alt=""><br/>
-							<br/>
-							<small style="color:grey">图4: 二次战后日本经济增速的三个阶段</small>
-							<p></p>
-						</div>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
-						<p style="line-height: 1.6em; text-indent: 2em;">自20世纪50年代末以来，我国台湾地区的经济增速也经历了三个阶段(见图5)：即从1962年到1980年，台湾的GDP平均年增速超过10%;从1973到1991为第二个台阶，GDP平均增速为7.6%，到1996年后，GDP下降到4.3% 。
-						</p>
+						<p></p>
+						<p></p>
+						<nav aria-label="Page navigation example">
+						  <ul class="pagination justify-content-center">
+						    <li class="page-item"><a id="previous" class="page-link" href="#">上一页</a></li>
+						    <li class="page-item active"><a class="page-link" href="weisen-1.html">1</a></li>
+						    <li class="page-item"><a class="page-link" href="weisen-2.html">2</a></li>
+						    <li class="page-item"><a class="page-link" href="weisen-3.html">3</a></li>
+						    <li class="page-item"><a class="page-link" href="weisen-4.html">4</a></li>
+						    <li class="page-item"><a class="page-link" href="weisen-5.html">5</a></li>
+						    <li class="page-item"><a id="next" class="page-link" href="#">下一页</a></li>
+						  </ul>
+						</nav>
 					</div>
 				</div>
 				<div class="col-1 box indexBox">
 				</div>
 			</div>
+			<div class="row">
+				<HR align=center width=1200 color=black SIZE=5>
+				<div class="col-9 footerBox">
+					<footer class="footer-div">
+						<a class="footer-link" id="copyRight-link" href="">版权声明 </a><b>|</b><a class="footer-link" id="contact-link" href="contact.html"> 联系方式</a>
+						<p style="margin-top:10px;">美中新视角基金会版权所有 Copyright &copy; The U.S.-China New Perspectives Foundation</p>
+						<p>电话TEL：+1（626）656-3512 (U.S.);</p> 
+						<p style="text-indent: 5em;">+86（10）6496-1765（中国)</p>
+					</footer>
+				</div>
+				<div class="col-3 QRcodeBox">
+					<div class="scan-links"> 
+          				<a class="forum-link" href="">
+          					<img class="scan-img" src="images/weixin.png" alt="微信公众号">
+          				</a>
+          				<p style="padding-top:20px;"> 微信公众号 </p>
+      				</div>
+				</div>
+			</div>
 		</div>
 	</body>
+	<script type="text/javascript">
+		var currPage = document.getElementsByClassName("page-item active");
+		var pagination = document.getElementsByClassName("page-item");
+		var previous = document.getElementById("previous");
+		var next = document.getElementById("next");
+		if(currPage[0].innerText == "1\n"){
+			pagination[0].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			previous.setAttribute("href", "weisen-" + (num-1) + ".html");
+		}
+		if(currPage[0].innerText == "5\n"){
+			pagination[pagination.length-1].setAttribute("class", "page-item disabled");
+		}
+		else{
+			var num = parseInt(currPage[0].innerText);
+			next.setAttribute("href", "weisen-" + (num+1) + ".html");
+		}
+		console.log(currPage);
+	</script>
 </html>
